# CRCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-unit-test.yml
inc/CRCpp/: CRCpp.hpp
test/src/: main.cpp
